# legend_of_python

./: .gitignore  Pipfile  README.md  change_image.py  drop_block.py  electric_enemy.py  enemy.py  fire_enemy.py  game.py  jump_enemy.py  load_image.py  map.py  offset.py  pyproject.toml  python.py
data/: test.map
map_data/: stage.map  test.map
src/: change_image.py  drop_block.py  electric_enemy.py  enemy.py  fire_enemy.py  game.py  jump_enemy.py  load_image.py  map.py  move_block.py  offset.py  player.py  python.py
