[tool.poetry]
name = "legend_of_python"
version = "0.1.0"
description = "action game by pygame"
authors = ["shimizu hayato <bigdanmcc@gamil.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
